# mth5

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  BUILD_EXECUTABLE_README.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE.md  MANIFEST.in  README.md  README.rst  build_executable.bat  build_executable.py  build_executable.sh  build_standalone_validator.py  code.json  codecov.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: bump-version.yml  format.yaml  publish.yml  tests.yml
docs/: README.rst  conf.py  create_metadata_tables.py  environment.yml  index.rst  installation.rst  mt_metadata_guide.docx  mt_metadata_guide.tex  readme.rst  usage.rst  usage_v2.rst
docs/autoapi/: index.rst
docs/examples/: make_mth5_from_fap_experiment.py  make_mth5_from_iris_dmc.py  make_mth5_from_nims.py  make_mth5_from_xml.py  make_stationxml_from_mt.py
docs/source/: SWMR_EXAMPLES_BASIC.md  SWMR_EXAMPLES_CONCURRENT.md  SWMR_GUIDE.md  SWMR_MIGRATION.md  VALIDATOR_IMPLEMENTATION.md  VALIDATOR_QUICKSTART.md  VALIDATOR_README.md  basics.rst  conventions.rst  example_interact_with_mth5.rst  example_make_mth5_iris.rst  examples.rst  file_readers  file_readers.rst  gotchas.rst  installation.rst  modules.rst  mt_metadata_guide.rst  mth5.clients.rst  mth5.data.rst  mth5.groups.filter_groups.rst  mth5.groups.rst  mth5.io.lemi.rst  mth5.io.metronix.rst  mth5.io.miniseed.rst  mth5.io.nims.rst  mth5.io.phoenix.readers.contiguous.rst  mth5.io.phoenix.readers.native.rst  mth5.io.phoenix.readers.rst  mth5.io.phoenix.readers.segmented.rst  mth5.io.phoenix.rst  mth5.io.rst  mth5.io.scripps.rst  mth5.io.usgs_ascii.rst  mth5.io.zen.rst  mth5.processing.rst  mth5.processing.spectre.rst  mth5.rst  mth5.standards.rst  mth5.tables.rst  (+14 more)
examples/: Test_station.xml  Untitled.ipynb  creating_metadata_for_mth5.ipynb  example.h5  from_iris_dmc.h5  make_mth5_file_from_xml.py  make_mth5_from_experiment.py  make_mth5_from_fap_experiment.py  make_mth5_from_iris_dmc.py  make_mth5_from_iris_dmc_local.py  make_mth5_from_lemi424.py  make_mth5_from_nims.py  make_mth5_from_xml.py  make_mth5_from_z3d.py  make_stationxml_from_mt.py  test.h5  test_examples.py  test_swmr_basic.py  test_swmr_concurrent.py  translate_mt_metadata_to_station_xml.py  validator_examples.py
examples/metadata/: auxiliary_example.xml  channel_example.json  channel_example.xml  electic_standards.csv  electric_example.json  electric_example.xml  magnetic_example.json  magnetic_example.xml  make_example_files.py  run_example.json  run_example.xml  station_example.json  station_example.xml  survey_example.json  survey_example.xml  test.csv
examples/notebooks/: Untitled.ipynb  create_examle_mth5_file.ipynb  creating_metadata_for_mth5.ipynb  make_mth5_driver.ipynb  make_mth5_driver_v0.2.0.ipynb  make_mth5_example_iris.ipynb  mth5_in_parallel.ipynb  mth5_in_parallel_one_file_per_station.ipynb  remove_instrument_response.ipynb  xarrays_and_processing.ipynb
logs/: pyproject.toml.txt
mth5/: __init__.py  calibration.py  filters.py  groups.py  helpers.py  metadata.py  mth5.py  mth5_tables.py  timeseries.py  to_stationxml.py
mth5/clients/: __init__.py  base.py  fdsn.py  geomag.py  lemi.py  lemi417.py  lemi424.py  make_mth5.py  metronix.py  nims.py  phoenix.py  uoa.py  zen.py
mth5/data/: 1690C16C.TBL  make_mth5_from_asc.py  mth5_from_dataframe.py  paths.py  station_config.py  test1.asc  test2.asc
mth5/datasets/: __init__.py  auxiliary.py  channel.py  electric.py  (+1 more)
tests/: Test_station.xml  conftest.py  environment.yml  failing_test_log.txt  fitting_lookup_to_zpk_bmurphy.ipynb  from_fap_stationxml.h5  mth5_debug.log.1  mth5_debug.log.2  test.mth5  test_build_from_experiment.py  test_channel_slice.py  test_channel_ts.py  test_filters.py  test_from_fap_stationxml.py  test_from_stationxml.py  test_inventory.csv  test_io_nims.py  test_make_mth5.py  test_metadata.py  test_mth5.py  test_mth5_basics.py  test_mth5_new.py  test_mth5_open_swmr.py  test_mth5_validator.py  test_mtime.py  test_read_phoenix.py  test_runts_slice.py  test_schema.py  test_stationxml_translator.py  test_timeseries.py  test_to_xml.py  vectfit.py
(+546 files in other folders)
